--- a/behavior_grid.html
+++ b/behavior_grid.html
@@ -2,28 +2,29 @@
 <html>
   <head>
     <link rel="stylesheet" href="styles.css" media="all" title="no title" charset="utf-8">
+    <script type="text/javascript" src="jquery-1.12.0.min.js"></script>
     <script type="text/javascript" src="scripts.js"></script>
     <title>behavior_grid</title>
   </head>
   <body>
     <table>
       <tr id="first-row">
-        <td><strong>Behavior(given)</strong> Our project should handle:</td>
-        <td><strong>Input Example(When)</strong>When it receives:</td>
-        <td><strong>Output Example(Then)</strong>It should return:</td>
+        <td><h4>Behavior(Given)</h4> <p>Our project should handle:</p></td>
+        <td><h4>Input Example(When)</h4> <p>When it receives:</p></td>
+        <td><h4>Output Example(Then)</h4> <p>It should return:</p></td>
+          <td><button type="button" name="button" class="add-row">Add row</button>
       </tr>
-      <form  action"#" method="#">
-        <tr>
-          <td><input type="text"></input></td>
-          <td><input type="text"></input></td>
-          <td><input type="text"></input></td>
-        </tr>
-        <tr>
-          <td><input type="text"></input></td>
-          <td><input type="text"></input></td>
-          <td><input type="text"></input></td>
-        </tr>
-      </form>
+      <tr class="before-row">
+        <td><textarea name="behavior-input" rows="1" cols="4"></textarea></td>
+        <td><textarea name="behavior-input" rows="1" cols="4"></textarea></td>
+        <td><textarea name="behavior-input" rows="1" cols="4"></textarea></td>
+      </tr>
+      <tr id="after-row">
+        <td><textarea name="behavior-input" rows="1" cols="4"></textarea></td>
+        <td><textarea name="behavior-input" rows="1" cols="4"></textarea></td>
+        <td><textarea name="behavior-input" rows="1" cols="4"></textarea></td>
+      </tr>
+      </div>
     </table>
 
   </body>
